# rust-fastapi-experiments

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  template.yaml
actix-web/: Cargo.toml  README.md
actix-web/src/: main.rs
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts  service.ts
rocket-test/: Cargo.toml
rocket-test/src/: main.rs
src/: main.rs
