[package]
name = "rocket-api"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_lamb = { git = "https://github.com/dbanty/rocket-lamb", branch = "rocket-0.5" }
serde = "1.0.119"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" , features = ["json"] }
serde_derive = "1.0.119"
rocket_okapi = { git = "https://github.com/dbanty/okapi", branch = "async2" }
schemars = { version = "0.8.0" }
okapi = { git = "https://github.com/dbanty/okapi", branch = "async2" }
tokio = "1.2.0"
