[package]
name = "actix-web"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-service = "1.0.6"
paperclip = { version = "0.5", features = ["actix"] }
serde = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
netlify_lambda_http = "0.2.0"
aws_lambda_events = "0.4.0"
